kubernetes/grpcserver2/namespace.yaml
---
apiVersion: v1
kind: Namespace
metadata:
  name: grpcserver2
  labels:
    istio-env: istio-control-master
    istio-injection: enabled
