kubernetes/grpcserver2/deployment.yaml
---
apiVersion: v1
kind: Namespace
metadata:
  name: grpcserver2
  labels:
    istio-injection: enabled
---
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: grpcserver2
  name: grpcserver2
  namespace: grpcserver2
spec:
  replicas: 2
  revisionHistoryLimit: 3
  selector:
    matchLabels:
      app: grpcserver2
  strategy:
    rollingUpdate:
      maxSurge: 100%
      maxUnavailable: 0%
    type: RollingUpdate
  template:
    metadata:
      labels:
        app: grpcserver2
    spec:
      containers:
        - image: ${CONTAINER_REGISTRY}/grpcserver2:4b08f25
          imagePullPolicy: Always
          name: grpcserver2
          ports:
            - containerPort: 7000
              name: grpc
              protocol: TCP
---
apiVersion: v1
kind: Service
metadata:
  name: grpcserver2
  namespace: grpcserver2
spec:
  type: ClusterIP
  ports:
    - name: grpc
      port: 7000
      protocol: TCP
      targetPort: 7000
  selector:
    app: grpcserver2
